# RExamsUtils

./: .gitignore  .gitmodules  README.md  ToDo.md
NERu/: README.md
PyExamsUtils/: MANIFEST.in  README.md  pyproject.toml
PyExamsUtils/src/PyExamsUtils/ex/: __init__.py  _reboot.py
PyExamsUtils/src/PyExamsUtils/git/: _git.py
PyExamsUtils/src/PyExamsUtils/r/: __init__.py
PyExamsUtils/src/PyExamsUtils/types/: __init__.py  _types.py
nbext/: extended_output_ext.py  hightlighting_ext.py  pNpDir_ext.py  repo_ext.py  resize_output_ext.py  skip_ext.py  sys_run_ext.py  sysrun_ext.py  writefileE_ext.py
nbscripts/: download_rexams_utils.py  download_sripts_and_extensions.py  importExt_script.py  init_rexams.py
notebooks/: RExamsInColabOverview.ipynb  RInColab.ipynb
notebooks/tutorials/: RExamsInColabOverview.ipynb  RInColab.ipynb
notebooks/tutorials/exercises/auxiliar/: exercise_templates_1.py  exercise_templates_2.py
pyexams/: .gitignore  LICENSE  README.md  pyproject.toml
pyexams/src/PyExamsUtils/: _metadata.py
pyexams/src/PyExamsUtils/ex/: _path.py  _run.py
pyexams/src/PyExamsUtils/fprnt/: _fprnt.py
pyexams/src/pyexams/: __init__.py  _metadata.py
pyexams/src/pyexams/ex/: _envcheck.py  _run.py
pyexams/src/pyexams/exams/: Params.mht  __init__.py  _basics.py  _install.py  _metadata.py  _render.py  _skeleton.py  _toHTML.py  _toMoodle.py  _toNOPS.py  _toPDF.py  _toPandoc.py
pyexams/src/pyexams/fprnt/: __init__.py
pyexams/src/pyexams/git/: __init__.py
pyexams/src/pyexams/r/: __init__.py  _output.py  _run.py
pyexams/src/pyexams/types/: __init__.py  _check.py  _decorators.py  _functions.py  _types.py
pyexams/test/: PyExamsUtilsTest.ipynb
